# gaze_based_remote_user_interface

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yaml
.docker/: Dockerfile.ml_cv_python3_8  Dockerfile.pupil_dev  Dockerfile.ros_noetic_remote_master  Dockerfile.sam2  Dockerfile.visualizer  Dockerfile.web_host_python3_8  docker-compose.yaml
.docker/pip_requirements/: ml_cv_python3_8.txt  ros_noetic_remote_master.txt  sam2.txt  visualizer.txt  web_host_python3_9.txt
app/app_manager/: main.py
app/app_manager/templates/: index.html  style.css
app/app_shared_data/: enum_definitions.py  message_broker.py  zmq_proxy.py
app/app_shared_data/mission_files/: README.md
app/mission_manager/: CMakeLists.txt  debug.sh  main.py  package.xml
app/mission_manager/msg/: MissionWaypoint.msg
app/mission_manager/srv/: mission_file_transfer.srv  mission_file_updates.srv  mission_states.srv  segmentation_file_transfer.srv
app/module_processor/: main.py  ocr_module.py  utilities.py
app/pupil_module/: message_parser.py  start.sh  supervisord.conf
app/pupil_module/pupil_capture_settings/: prerecorded_calibration_result  prerecorded_calibration_setup  surface_definitions_v01  user_settings_eye0  user_settings_eye1  user_settings_world
app/segmentation_module/: main.py  verify_model.py
app/video_manager/: main.py
app/visualizer/: main.py
app/web_host/: Untitled-1.txt  import asyncio.txt  main.py
app/web_host/static/: event_handler.js  style.css
app/web_host/templates/: index.html
web_app/: Dockerfile  main.py
web_app/templates/: index.html
(+6 files in other folders)
